<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background"
    android:gravity="center"
    android:orientation="vertical"
    tools:context=".temperatura">


    <TextView
        android:id="@+id/textView2"
        android:layout_width="283dp"
        android:layout_height="100dp"
        android:layout_gravity="center"
        android:layout_marginStart="70dp"
        android:layout_marginTop="-40dp"
        android:layout_marginEnd="50dp"
        android:text="@string/titulo"
        android:textColor="#4c2882"
        android:textSize="40sp"
        android:textStyle="bold" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="-90dp"
        android:layout_marginTop="30dp"
        android:layout_marginEnd="20dp"
        android:text="@string/titulo2"
        android:textColor="#4c2882"
        android:textSize="23sp"
        android:textStyle="bold" />

    <Spinner

        android:id="@+id/Menu1"
        android:layout_width="300dp"
        android:layout_height="48dp"
        android:layout_margin="-1dp"
        android:layout_marginStart="55dp"
        android:layout_marginTop="15dp"
        android:layout_marginEnd="60dp"
        android:padding="10dp">

    </Spinner>

    <EditText
        android:id="@+id/Temperatura1"
        android:layout_width="300dp"
        android:layout_height="48dp"
        android:layout_marginStart="55dp"
        android:layout_marginTop="15dp"
        android:layout_marginEnd="60dp"
        android:background="@drawable/forget"
        android:hint="@string/titulo4"
        android:importantForAutofill="no"
        android:inputType="number" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="-90dp"
        android:layout_marginTop="30dp"
        android:layout_marginEnd="20dp"
        android:text="@string/titulo3"
        android:textColor="#4c2882"
        android:textSize="23sp"
        android:textStyle="bold" />

    <Spinner

        android:id="@+id/Menu2"
        android:layout_width="300dp"
        android:layout_height="48dp"
        android:layout_margin="-1dp"
        android:layout_marginStart="55dp"
        android:layout_marginTop="15dp"
        android:layout_marginEnd="60dp"
        android:padding="10dp">

    </Spinner>

    <EditText
        android:id="@+id/Temperatura2"
        android:layout_width="300dp"
        android:layout_height="48dp"
        android:layout_marginStart="55dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="60dp"
        android:background="@drawable/forget"
        android:hint="@string/titulo5"
        android:importantForAutofill="no"
        android:inputType="number" />

    <Button
        android:id="@+id/Calcular"
        android:layout_width="100dp"
        android:layout_height="48dp"
        android:layout_gravity="start"
        android:layout_marginStart="10dp"
        android:layout_marginTop="60dp"
        android:background="@drawable/btn"
        android:text="@string/Boton3"
        android:textColor="@color/white"
        android:textSize="15sp" />

    <Button
        android:id="@+id/Limpiar"
        android:layout_width="100dp"
        android:layout_height="48dp"
        android:layout_gravity="center"
        android:layout_marginTop="-50dp"
        android:background="@drawable/btn"
        android:text="@string/Boton2"
        android:textColor="@color/white"
        android:textSize="15sp" />

    <Button
        android:id="@+id/Atras"
        android:layout_width="100dp"
        android:layout_height="48dp"
        android:layout_gravity="end"
        android:layout_marginTop="-50dp"
        android:layout_marginEnd="10dp"
        android:background="@drawable/btn"
        android:text="@string/Boton1"
        android:textColor="@color/white"
        android:textSize="15sp" />

</LinearLayout>